\name{NEWS}
\title{NEWS file for the gCMAP}

\section{Changes in version 1.7.2}{
  \itemize{
 \item{CHANGE: }{Helper functions KEGG2cmap, reactome2cmap, wiki2cmap and go2cmap have two additional parameters, min.size and max.size, restricting the output to gene sets containing members within the specified range.}
 \item{CHANGE: }{Method camera_score now outputs correlations in column 'effect'.}
 \item{BUGFIX: }{Correct numbers of annotated genes are now returned for each set.}
}
}

\section{Changes in version 1.7.1}{
  \itemize{
 \item{CHANGE: }{Vignettes are now stored in vignettes directory.}
}
}

\section{Changes in version 1.5.4}{
  \itemize{
 \item{NEW: }{The bigmemory and bigmemoryExtras packages are not optional, enabling use of gCMAP on Windows}
}
}
\section{Changes in version 1.5.3}{
  \itemize{
 \item{NEW: }{Updated titles of vignettes}
}
}
\section{Changes in version 1.5.2}{
  \itemize{
 \item{BUGFIX: }{Updated eSet construction in mapNmerge function}
}
}
\section{Changes in version 1.5.1}{
   \itemize{
\item{BUGFIX: }{fixed incorrect varMetaData element definition in .process_counts}
}
}
\section{Changes in version 1.3.5}{
   \itemize{
 \item{NEW: }{DESeq package is now listed as 'Suggested' instead of 'Depends'}
}
}

\section{Changes in version 1.3.4}{
  \itemize{
 \item{NEW: }{Removed lattice and reshape dependencies.}
 \item{NEW: }{Removed cmapQAPlot function.}
 \item{NEW: }{Added generate_gCMAP_NChannelSet's 'report.center' parameter.}
}
}
\section{Changes in version 1.3.3}{
  \itemize{
 \item{NEW: }{Experimented with cmapQAPlot function (removed again in version 1.3.4).}
}
}
\section{Changes in version 1.3.2}{
   \itemize{
\item{NEW: }{mgsa_score method wrapping the model-based gene set analysis approach available in the mgsa package.}
}
}

\section{Changes in version 1.3.1}{
  \itemize{
 \item{NEW: }{KEGG2cmap, reactome2cmap, wiki2cmap and go2cmap to functions to generate CMAPCollections from public annotation databases}
}
}
